# ttcp

./: CMakeLists.txt  inetaddress.cpp  inetaddress.h  socket.cpp  socket.h  tcpstream.cpp  tcpstream.h
client/: client.cpp
server/: server.cpp
ttcp/: README.md
ttcp/client/: ttcp-client.cpp
ttcp/server/: ttcp-server.cpp
